# generic-prog-lang

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE
.github/workflows/: ci.yml
cong-framework/c++/: ApplyMember.hh  ApplyMember_operator.hh  Base.hh  Bind.hh  BindArg.hh  CollectGenericImpls.hh  Decls.hh  Exp.hh  Fun.hh  Function.hh  Proj.hh  Quote.hh  Traits.hh  Type.hh  Undefined.hh  Val.hh
cong-framework/c++/Boolean/: Boolean.hh  BooleanDynamic.hh  BooleanStatic.hh  and_.hh  and__dec.hh  cond.hh  cond_dec.hh  not_.hh  not__dec.hh  or_.hh  or__dec.hh  xor_.hh  xor__dec.hh
cong-framework/c++/Boolean/core/: Boolean.hh  BooleanLexical.hh  BooleanStatic.hh  operator.hh
cong-framework/c++/Number/: Cardinal.hh  Complex.hh  Integer.hh  IntegerDynamic.hh  IntegerStatic.hh  Natural.hh  NaturalDynamic.hh  NaturalIntervalStatic.hh  NaturalLexical.hh  NaturalStatic.hh  Number.hh  Rational.hh  Real.hh  add.hh  add_dec.hh  div.hh  div_dec.hh  mod.hh  mod_dec.hh  mul.hh  mul_dec.hh  pow.hh  pow_dec.hh  pred.hh  pred_dec.hh  sub.hh  sub_dec.hh  succ.hh  succ_dec.hh
cong-framework/c++/Number/core/: Integer.hh  Natural.hh  NaturalIntervalStatic.hh  NaturalStatic.hh  Real.hh  RealStatic.hh  operator.hh
cong-framework/c++/Object/: Object.hh  ObjectDynamic.hh  ObjectStatic.hh  id.hh  id_dec.hh  isEqual.hh  isEqual_dec.hh  isModelOf.hh  isModelOf_dec.hh  isNotEqual.hh  isNotEqual_dec.hh
cong-framework/c++/Object/core/: Object.hh
cong-framework/c++/Ordered/: Ordered.hh  isGreater.hh  isGreaterEqual.hh  isGreaterEqual_dec.hh  isGreater_dec.hh  isLess.hh  isLessEqual.hh  isLessEqual_dec.hh  isLess_dec.hh
cong-framework/c++/Seq/: SeqLexical.hh  Tuple.hh
cong-framework/c++/Seq/core/: SeqLexical.hh  Tuple.hh
cong-framework/c++/String/core/: StringStatic.hh
cong-framework/c++/core/: Fun.hh  Lexical.hh  Operator.hh  Operator_foot.hh
cong-framework/python/: __init__.py  example.py
cong-framework/python/Boolean/: Boolean.py  and_.py  cond.py  imply.py  not_.py  or_.py  xor.py
cong-framework/python/Map/: Map.py  applyFun.py  codomain.py  compose.py  convert.py  domain.py  embed.py  filter.py  identity.py  image.py  leftDiff.py  leftIntersection.py  leftUnion.py  preImage.py  range.py  reduce.py
cong-framework/python/Number/: Cardinal.py  Complex.py  Integer.py  Natural.py  Number.py  Rational.py  Real.py  add.py  div.py  mod.py  mul.py  pow.py  pred.py  sub.py  succ.py
cong-framework/python/Object/: Object.py  assign.py  id.py  isEqual.py  isModelOf.py  isNotEqual.py
cong-framework/python/Ordered/: Ordered.py  isGreater.py  isGreaterEqual.py  isLess.py  isLessEqual.py
cong-framework/python/core/: __init__.py  base.py  bind.py  concept.py  concept_sequence.py  exp.py  function.py  object.py  primitive.py  proj.py  quote.py  val.py
example/: Algebra.txt  Boolean.txt  CellComplex.txt  Graph.txt  Grid.txt  Interface.txt  Map.txt  Matrix.txt  Number.txt  Object.txt  Ordered.txt  Seq.txt  Set.txt  SpaceGeo.txt  SpaceTopo.txt  Statistics.txt  Tree.txt  example_1.txt  other.txt
grammar/: Cong.g4  CongLexer.g4  CongParser.g4
include/: CustomErrorListener.h  Debug.h  Decls.h  Exception.h  Preprocessor.h  Processor.h  Utils.h
include/export/: ConceptDependencyGraph.h  FunctionDependencyGraph.h  InjaEngine.h  JinjaEngine.h  LangExport.h
include/export/c++/: JinjaCppExport.h
include/export/python/: JinjaPythonExport.h
include/instantiation/: ConceptInstantiator.h  FunctionInstantiator.h
include/sema/: Concept.h  EvaluationContext.h  Expression.h  Family.h  Function.h  FunctionParameter.h  GenericImplementation.h  Namespace.h  OpenBinding.h  RequiresStatement.h  Sema.h  SemaContext.h  SemaElement.h  SemaError.h  SemaIdentifier.h
include/visitor/: AbstractVisitor.h  DeclarationVisitor.h  DefinitionVisitor.h  ExpressionVisitor.h  FinalizingFunctionVisitor.h
interfaces/: Algebra.txt  Boolean.txt  CellComplex.txt  Graph.txt  Grid.txt  Interface.txt  Map.txt  Matrix.txt  Number.txt  Object.txt  Ordered.txt  Seq.txt  Set.txt  SpaceGeo.txt  SpaceTopo.txt  Statistics.txt  Tree.txt
src/: CustomErrorListener.cpp  Preprocessor.cpp  Utils.cpp  main.cpp
src/export/: ConceptDependencyGraph.cpp  FunctionDependencyGraph.cpp  InjaEngine.cpp  JinjaEngine.cpp  LangExport.cpp
src/export/c++/: JinjaCppExport.cpp
src/export/python/: JinjaPythonExport.cpp
src/instantiation/: ConceptInstantiator.cpp  FunctionInstantiator.cpp
src/sema/: Concept.cpp  EvaluationContext.cpp  Expression.cpp  Family.cpp  Function.cpp  FunctionParameter.cpp  GenericImplementation.cpp  Namespace.cpp  RequiresStatement.cpp  Sema.cpp  SemaContext.cpp  SemaIdentifier.cpp
src/visitor/: AbstractVisitor.cpp  ExpressionVisitor.cpp  FinalizingFunctionVisitor.cpp
templates/: concept.h  concept.h.j2  concept.hh.j2  concept.py.j2  function.hh.j2  function.py.j2  function_dec.hh.j2
templates/macros/c++/: concept.j2  function.j2  namespace.j2
templates/macros/python/: concept.j2  function.j2
test/: Common.h  TestUtils.cpp
test/export/: TestConceptDependencyGraph.cpp  TestFunctionDependencyGraph.cpp
test/sema/: TestConcept.cpp  TestEvaluationContext.cpp  TestExpression.cpp  TestFunction.cpp  TestFunctionParameter.cpp  TestNamespace.cpp
